<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <data>

    </data>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/filterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/backIcon"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_toRightOf="@+id/filterIcon"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/cooperhewitt_book"
            android:id="@+id/main_txt"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="20sp"
            android:text="@string/notifications"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:id="@+id/txt_clear"
            android:fontFamily="@font/cooperhewitt_book"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20sp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorPrimary"
            android:text="@string/clear"/>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_below="@+id/main_txt"
            android:layout_height="match_parent"
            android:id="@+id/notification_recycler">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/no_notification_available"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:contentDescription="@string/notifications"
                android:layout_height="100dp"
                android:src="@drawable/notification1"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:text="@string/notificationText"/>
        </LinearLayout>

    </RelativeLayout>
</layout>