<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/exoControlView"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/liveShape"
            android:layout_width="@dimen/_4sdp"
            android:layout_height="@dimen/_4sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30sp"
            android:layout_marginBottom="@dimen/_100sdp"
            android:contentDescription="@string/yes"
            android:src="@drawable/record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:tint="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/liveTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/playerLive"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/liveShape"
            app:layout_constraintLeft_toRightOf="@+id/liveShape"
            app:layout_constraintTop_toTopOf="@+id/liveShape" />

        <com.depvt.live.football.tv.utils.playerutils.SeekBarClass
            android:id="@+id/seekProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="10dp"
            android:enabled="false"
            android:progress="100"
            android:theme="@style/MySeekBar2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liveTxt">

        </com.depvt.live.football.tv.utils.playerutils.SeekBarClass>

        <View
            android:id="@+id/lock_affect"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/circle_background"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekProgress" />

        <ImageView
            android:id="@+id/lock_mode"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/lockIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekProgress"
            app:srcCompat="@drawable/ic_locked"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@id/exo_play_pause"
            style="@style/ExoMediaButton.Pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:contentDescription="@string/pauseIcon"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="@+id/lock_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekProgress"
            app:layout_constraintTop_toTopOf="@+id/lock_mode"
            app:tint="@android:color/white" />


        <View
            android:id="@+id/layout_right"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/circle_background"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekProgress" />

        <ImageView
            android:id="@+id/full_screen_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/screenModeIcon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekProgress"
            app:srcCompat="@drawable/ic_full_screen"
            app:tint="@android:color/white"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/chnaged_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/rectangular_view"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:text="@string/playerStretch"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>